--- a/food_and_resturant_project/assets/CSS/styel.css
+++ b/food_and_resturant_project/assets/CSS/styel.css
@@ -45,6 +45,31 @@ a {
 .default--color{
     color: rgba(255, 230, 0, 0.89);
 }
+.website--btn{
+    background-color: rgba(255, 230, 0, 0.89);
+    color: rgb(32, 30, 30);
+    border: none;
+    padding: 10px 20px;
+    font-size: 20px;
+    border-radius: 10px;
+    cursor: pointer;
+    display: inline-block;
+    margin: 20px 0;
+}
+
+.website--title h4{
+    color: rgba(255, 230, 0, 0.89);
+    font-size: 24px;
+}
+.website--title h1{
+    color: #fff;
+    font-size: 28px;
+    padding: 10px 0;
+}
+.website--title p{
+    color: #fff;
+    font-size: 18px;
+}
 /* -------------------
    header css end    
 ----------------------*/
@@ -68,16 +93,6 @@ a {
   .banner__container p{
       color: #fff;
       font-size: 28px;
-      padding-bottom: 20px;
-  }
-  .banner__container button{
-      background-color:rgba(255, 230, 0, 0.89);
-      color: rgb(32, 30, 30);
-      border: none;
-      padding: 10px 20px;
-      font-size: 20px;
-      border-radius: 10px;
-      cursor: pointer;
   }
   .banner__img{
       width: 40%;
@@ -88,3 +103,23 @@ a {
 /* --------------------
   banner-section end
   ---------------------- */
+
+
+  /* ---------------------
+    about us section start
+    ---------------------- */
+    .about{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+       margin: 100px 0;
+    }
+    .about__img{
+        width: 50%;
+    }
+    .about__container{
+        width: 40%;
+    }
+  /* ---------------------
+    about us section end
+    ---------------------- */
