--- a/food_and_resturant_project/assets/CSS/styel.css
+++ b/food_and_resturant_project/assets/CSS/styel.css
@@ -20,9 +20,39 @@ a {
     max-width: 1200px;
     margin: 0 auto;
 }
+.default--color {
+    color: orange;
+}
 
+.website--btn {
+    color: orange;
+    color: rgb(32, 30, 30);
+    border: none;
+    padding: 10px 20px;
+    font-size: 20px;
+    border-radius: 10px;
+    cursor: pointer;
+    display: inline-block;
+    margin: 20px 0;
+}
+
+.website--title h4 {
+    color: orange;
+    font-size: 24px;
+}
+
+.website--title h1 {
+    color: #fff;
+    font-size: 28px;
+    padding: 10px 0;
+}
+
+.website--title p {
+    color: #fff;
+    font-size: 18px;
+}
 /* -------------------
-   header css start    
+header css start    
 ----------------------*/
 .header {
     display: flex;
@@ -43,124 +73,131 @@ a {
     color: #fff;
     font-size: 22px;
 }
-.default--color{
-    color: orange;
-}
-.website--btn{
-   color: orange;
-    color: rgb(32, 30, 30);
-    border: none;
-    padding: 10px 20px;
-    font-size: 20px;
-    border-radius: 10px;
-    cursor: pointer;
-    display: inline-block;
-    margin: 20px 0;
-}
 
-.website--title h4{
-   color: orange;
-    font-size: 24px;
-}
-.website--title h1{
-    color: #fff;
-    font-size: 28px;
-    padding: 10px 0;
-}
-.website--title p{
-    color: #fff;
-    font-size: 18px;
-}
 /* -------------------
-   header css end    
+header css end    
 ----------------------*/
 
 /* --------------------
-  banner-section start
-  ---------------------- */
-  .banner{
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding-top: 100px;
-  }
-  .banner__container{
-      width: 50%;
-  }
-  .banner__container h1{
-      font-size: 50px;
-      font-style: italic;
-  }
-  .banner__container p{
-      color: #fff;
-      font-size: 28px;
-  }
-  .banner__img{
-      width: 40%;
-  }
-  .banner__img img{
-      width: 100%;
-  }
+banner-section start
+---------------------- */
+.banner{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 100px;
+}
+.banner__container{
+    width: 50%;
+}
+.banner__container h1{
+    font-size: 50px;
+    font-style: italic;
+}
+.banner__container p{
+    color: #fff;
+    font-size: 28px;
+}
+.banner__img{
+    width: 40%;
+}
+.banner__img img{
+    width: 100%;
+}
 /* --------------------
-  banner-section end
-  ---------------------- */
+banner-section end
+---------------------- */
 
 
-  /* ---------------------
-    about us section start
-    ---------------------- */
-    .about{
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-       margin: 100px 0;
-    }
-    .about__img{
-        width: 50%;
-    }
-    .about__container{
-        width: 40%;
-    }
-  /* ---------------------
-    about us section end
-    ---------------------- */
+/* ---------------------
+about us section start
+---------------------- */
+.about{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 100px 0;
+}
+.about__img{
+    width: 50%;
+}
+.about__container{
+    width: 40%;
+}
+/* ---------------------
+about us section end
+---------------------- */
 
-    /* -------------------
-       menu section start
-       ------------------ */
-       .menu{
-           margin: 100px 0;
-       }
-       .menu__title{
-           text-align: center;
-           padding-bottom: 20px;
-       }
-       .menu__card{
-           display: flex;
-           justify-content: center;
-        }
-        .menu__single{
-           width: 32%;
-           margin-left: 1%;
-          background-color: #fff;
-          padding: 20px;
-          border-radius: 20px;
-       }
-       .menu__single--container{
-          padding-left: 60px;
-          margin-top: 10px;
-       }
-       .menu__single--container h2{
-           font-size: 24px;
-       }
-       .menu__single--container h4{
-           font-size: 20px;
-           padding: 7px 0;
-       }
-       .menu__single--container p{
-           font-size: 19px;
-           color: orange;
-       }
-    /* -------------------
-       menu section end
-       ------------------ */
+/* -------------------
+menu section start
+------------------ */
+.menu{
+    margin: 100px 0;
+}
+.menu__title{
+    text-align: center;
+    padding-bottom: 20px;
+}
+.menu__card{
+    display: flex;
+    justify-content: center;
+}
+.menu__single{
+    width: 32%;
+    margin-left: 1%;
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 20px;
+}
+.menu__single--container{
+    padding-left: 60px;
+    margin-top: 10px;
+}
+.menu__single--container h2{
+    font-size: 24px;
+}
+.menu__single--container h4{
+    font-size: 20px;
+    padding: 7px 0;
+}
+.menu__single--container p{
+    font-size: 19px;
+    color: orange;
+}
+/* -------------------
+menu section end
+------------------ */
+
+/* ------------------
+service section start
+--------------------- */
+.service{
+    margin: 100px 0;
+}
+.service__title{
+    text-align: center;
+}
+.service__card{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 20px;
+}
+.service__single{
+    width: 30%;
+    text-align: center;
+}
+.service__single img{
+    width: 150px;
+}
+.service__single h4{
+    color: orange;
+    font-size: 24px;
+    padding: 20px 0;
+}
+.service__single p{
+    color: #fff;
+    font-size: 18px;
+}
+/* ------------------
+service section end
+--------------------- */
